<resources>
    <string name="app_name">GroceryPal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="groceryPalLogo">GroceryPal</string>
    <string name="cartImageName">cartImage</string>
    <string name="catchPhrase">Et la gestion des commissions devient facile !</string>
    <string name="titleshapeholder">titleShapeholder</string>
    <string name="recetteselect_titre">Recettes séléctionnées</string>
    <string name="recettes">Recettes</string>
    <string name="tout_afficher">Tout afficher</string>
    <string name="ajouter_ma_liste">Ajouter à ma liste</string>
    <string name="modifier">Modifier</string>
    <string name="ma_liste">Ma liste de course</string>
    <string name="profil">Profil</string>
    <string name="deco">Déconnexion</string>
    <string name="regime">Régimes alimentaires et allergies</string>
    <string name="preference">Préférences</string>
    <string name="default_personne">Nombre de personne par défaut pour les recettes</string>
    <string name="minus">-</string>
    <string name="more">+</string>
    <string name="save">Enregistrer</string>
    <string name="delete">Supprimer</string>
    <string name="default_value">1</string>
    <string name="empty_list">Aucun produit dans votre liste</string>
    <string name="delete_produce">Supprimer les produits achetés</string>
    <string name="minustext">-</string>
    <string name="ajouter_ingredient">Ajouter un ingrédient</string>
    <string name="sign_up">Sign up</string>
    <string name="your_name">Your name</string>
    <string name="votre_nom">Votre nom</string>
    <string name="mot_de_passe">Mot de passe</string>
</resources>