<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titleTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:text="@string/profil"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dividerView1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="28dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView1"
            tools:layout_editor_absoluteX="0dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seeAllButton"
            style="@style/CustomGrayButton"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/deco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView2"
            android:layout_width="207dp"
            android:layout_height="51dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/regime"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerView1" />

        <View
            android:id="@+id/dividerView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modifButton"
            style="@style/CustomGrayButton"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:text="@string/modifier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerView1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/dividerView2"/>

        <TextView
            android:id="@+id/titlePreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/preference"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="358dp"
            android:layout_height="104dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePreference">


            <TextView
                android:id="@+id/textModif"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/default_personne"
                android:textSize="18sp" />

            <Button
                android:id="@+id/minusButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/quantityEditText"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/default_value"
                android:textSize="18sp" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/more"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>