<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/ovalBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/oval_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="125dp"
        android:contentDescription="@string/titleshapeholder" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/groceryPalLogo"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/ovalBackground"
        tools:layout_editor_absoluteX="130dp"
        app:layout_constraintStart_toStartOf="@+id/ovalBackground"
        app:layout_constraintEnd_toEndOf="@+id/ovalBackground"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/catchPhrase"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="229dp"
        app:layout_constraintBottom_toBottomOf="@+id/ovalBackground"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/ovalBackground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/CustomButton"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

</androidx.constraintlayout.widget.ConstraintLayout>
