<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">


        <TextView
            android:id="@+id/NbPersonnes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:textSize="44sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/VotreNomTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:text="Votre nom"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nomEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Votre nom"
            android:hint="@string/votre_nom"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VotreNomTv" />

        <TextView
            android:id="@+id/VotrePrenomTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Votre Prénom"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomEt" />

        <EditText
            android:id="@+id/prenomEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Your name"
            android:hint="@string/your_name"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VotrePrenomTv" />

        <TextView
            android:id="@+id/EmailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prenomEt" />


        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailTv" />

        <TextView
            android:id="@+id/passwordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mot de passe"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mot_de_passe"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTv" />

        <TextView
            android:id="@+id/titlePreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/preference"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="358dp"
            android:layout_height="104dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePreference">


            <TextView
                android:id="@+id/textModif"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/default_personne"
                android:textSize="18sp" />

            <Button
                android:id="@+id/minusButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/quantityEditText"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/default_value"
                android:textSize="18sp" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/more"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/SignUp_Button"
            style="@style/CustomButton"
            android:text="@string/sign_up"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout"
            app:layout_constraintVertical_bias="0.77"
            android:enabled="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
