<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recetteselect_titre"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="12dp" />

        <View
            android:id="@+id/dividerView1"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/dividerView1"
            tools:layout_editor_absoluteX="12dp" />

        <View
            android:id="@+id/dividerView2"
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/titleTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="12dp"
            android:text="@string/recettes"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerView2" />

        <View
            android:id="@+id/dividerView3"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toutAfficherButton"
            style="@style/CustomGrayButton"
            android:layout_marginStart="180dp"
            android:text="@string/tout_afficher"
            app:layout_constraintBottom_toBottomOf="@id/titleTextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextView2"
            app:layout_constraintVertical_bias="0.48" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/dividerView3"
            tools:layout_editor_absoluteX="12dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
